--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,12 @@
     font-size: 1rem;
     margin: 0;
     padding: 0;
-    color: rgb(138, 111, 197);
+    color: rgb(248, 184, 255);
     border-color: rgb(107, 82, 163);
     font-weight: bold;
 }
 body{
+    background-color: rgb(19, 19, 19);
     padding-top: 10px;
     padding-bottom: 1px;
     height: 100vh;
@@ -48,6 +49,12 @@ form{
     text-align: center;
     font-weight: 500;
     border-color: black;
+    color: black;
+}
+.ad-data{
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
 }
 .description-of-weather{
     margin-top: 5%;
@@ -102,21 +109,20 @@ form{
     align-items: center;
     gap: 10%;
     margin-left: 10%;
-
 }
 .rain-data{
     display: flex;
     align-items: center;
     gap: 10%;
     margin-left: 10%;
-
 }
 .humidity-data{
     display: flex;
     align-items: center;
     gap: 10%;
     margin-left: 10%;
-
+}
+.wind-data-text, .humidity-data-text, .rain-data-text{
 }
 .bigicon{
     width: 70%;
@@ -124,9 +130,8 @@ form{
 }
 .todays-temp{
     font-size: 6.2rem;
-    margin-left: 12%;
+    margin-left: 14%;
     font-weight: 500;
-    color: rgb(120, 92, 179);
 }
 .todays-min-max{
     font-size: 1.15rem;
@@ -180,7 +185,7 @@ form{
     font-size: 1.6rem;
 }
 .gray{
-    color: rgb(175, 175, 175);
+    color: rgb(58, 58, 58);
 }
 .searchButton{
     width: 28px;
@@ -198,7 +203,7 @@ footer{
 .footer{
     font-weight: normal;
     font-size: .8rem;
-    color: black;
+    color: white;
 }
 footer, p, a, img{
     background-color: transparent;
@@ -213,7 +218,6 @@ footer, p, a, img{
 .fa-github:hover {
     transform: rotate(360deg) scale(1.3);
 }
-/*
 img{
     filter:contrast(150%);
 }
